--- a/src/fr/lionware/ecorally/views/PlaygroundLayout.fxml
+++ b/src/fr/lionware/ecorally/views/PlaygroundLayout.fxml
@@ -1,15 +1,33 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.Group?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.shape.Rectangle?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.lionware.ecorally.controllers.PlaygroundLayout">
+<AnchorPane fx:id="root" onKeyPressed="#keyPressed" onKeyReleased="#keyReleased" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.lionware.ecorally.controllers.PlaygroundLayout">
    <children>
-      <ImageView fitHeight="400.0" fitWidth="600.0" pickOnBounds="true">
-         <image>
-            <Image url="@../../../../../../../Downloads/7956298ae43266e.jpg" />
-         </image>
-      </ImageView>
+      <Button layoutX="29.0" layoutY="34.0" mnemonicParsing="false" text="Button" />
+      <Rectangle fx:id="ground" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="100.0" layoutX="112.0" layoutY="200.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
+      <Group fx:id="car" layoutX="80.0" layoutY="220.0">
+         <children>
+            <ImageView fx:id="carImage" fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="file:/Users/tbichot/Desktop//car.png" />
+               </image></ImageView>
+            <ImageView fx:id="frontWheel" fitHeight="40.0" fitWidth="35.0" layoutX="14.0" layoutY="42.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="file:/Users/tbichot//Desktop/wheel.png" />
+               </image>
+            </ImageView>
+            <ImageView fx:id="backWheel" fitHeight="40.0" fitWidth="35.0" layoutX="146.0" layoutY="42.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="file:/Users/tbichot/Desktop/wheel.png" />
+               </image>
+            </ImageView>
+         </children>
+      </Group>
    </children>
 </AnchorPane>
