--- a/src/fr/lionware/ecorally/views/PlaygroundLayout.fxml
+++ b/src/fr/lionware/ecorally/views/PlaygroundLayout.fxml
@@ -1,17 +1,50 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Rectangle2D?>
 <?import javafx.scene.Group?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.shape.CubicCurve?>
+<?import javafx.scene.shape.Polygon?>
 <?import javafx.scene.shape.Rectangle?>
 
 <AnchorPane fx:id="root" onKeyPressed="#keyPressed" onKeyReleased="#keyReleased" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.lionware.ecorally.controllers.PlaygroundLayout">
    <children>
-      <Button layoutX="29.0" layoutY="34.0" mnemonicParsing="false" text="Button" />
-      <Rectangle fx:id="ground" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="100.0" layoutX="112.0" layoutY="200.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
-      <Group fx:id="car" layoutX="80.0" layoutY="220.0">
+      <Group fx:id="background">
+         <children>
+            <ImageView fitHeight="630.0" fitWidth="1328.0" pickOnBounds="true">
+               <viewport>
+                  <Rectangle2D />
+               </viewport>
+               <image>
+                  <Image url="@assets/game_background_3.1.png" />
+               </image>
+            </ImageView>
+            <ImageView fitHeight="630.0" fitWidth="1328.0" layoutX="1328.0" pickOnBounds="true">
+               <viewport>
+                  <Rectangle2D />
+               </viewport>
+               <image>
+                  <Image url="@assets/game_background_3.1.png" />
+               </image>
+            </ImageView>
+         </children>
+      </Group>
+      <Button layoutX="14.0" layoutY="45.0" mnemonicParsing="false" text="Play" />
+      <Group fx:id="ground" layoutY="60.0">
+         <children>
+            <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#3a2d54" height="200.0" layoutY="320.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="700.0" />
+            <CubicCurve controlX1="23.0" controlX2="182.0" controlY1="-51.0" controlY2="-63.0" endX="394.0" endY="149.0" fill="#3a2d54" layoutX="750.0" layoutY="371.0" startX="-54.0" startY="-51.0" stroke="BLACK" strokeWidth="0.0" />
+            <Polygon fill="#3a2d54" layoutX="777.0" layoutY="411.0" points="-78.0, 109.0, 374.4111328125, 109.0, -78.0, -91.62411499023438" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" />
+            <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#3a2d54" height="200.0" layoutY="500.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="3000.0" />
+            <CubicCurve controlX1="-142.3389892578125" controlX2="23.0" controlY1="-51.0" controlY2="-290.6912536621094" endX="540.2001953125" endY="-290.6912841796875" fill="#3a2d54" layoutX="1772.0" layoutY="594.0" startX="-54.0" startY="-51.0" stroke="BLACK" strokeWidth="0.0" />
+            <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#3a2d54" height="200.0" layoutX="2308.0" layoutY="303.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="607.0" />
+            <Polygon fill="#3a2d54" layoutX="1812.0" layoutY="441.0" points="522.0, 70.0, 496.0, -138.0, -18.380126953125, 57.999969482421875" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" />
+         </children>
+      </Group>
+      <Group fx:id="car" layoutX="80.0" layoutY="300.0">
          <children>
             <ImageView fx:id="carImage" fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
                <image>
