--- a/src/fr/lionware/ecorally/views/Garage.fxml
+++ b/src/fr/lionware/ecorally/views/Garage.fxml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TabPane?>
 <?import javafx.scene.layout.AnchorPane?>
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.lionware.ecorally.controllers.Garage">
    <children>
-      <TabPane fx:id="tabs" layoutX="14.0" layoutY="14.0" prefHeight="372.0" prefWidth="571.0" tabClosingPolicy="UNAVAILABLE" />
+      <TabPane fx:id="tabs" layoutX="14.0" layoutY="72.0" prefHeight="314.0" prefWidth="571.0" tabClosingPolicy="UNAVAILABLE" />
+      <Button layoutX="522.0" layoutY="30.0" mnemonicParsing="false" onAction="#openStore" text="Magasin" />
    </children>
 </AnchorPane>
