--- a/src/fr/lionware/ecorally/views/Store.fxml
+++ b/src/fr/lionware/ecorally/views/Store.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TabPane?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -8,5 +9,6 @@
     <children>
         <TabPane fx:id="tabs" layoutX="14.0" layoutY="45.0" prefHeight="342.0" prefWidth="571.0" tabClosingPolicy="UNAVAILABLE" />
       <Label fx:id="moneyLabel" layoutX="557.0" layoutY="14.0" />
+      <Button layoutX="14.0" layoutY="1.0" mnemonicParsing="false" onAction="#openGarage" text="Garage" />
     </children>
 </AnchorPane>
