--- a/src/fr/lionware/ecorally/views/Garage.fxml
+++ b/src/fr/lionware/ecorally/views/Garage.fxml
@@ -2,12 +2,19 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TabPane?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.lionware.ecorally.controllers.Garage">
    <children>
+      <ImageView fitHeight="400.0" fitWidth="600.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@assets/GarageBackground.png" />
+         </image>
+      </ImageView>
       <TabPane fx:id="tabs" layoutX="14.0" layoutY="72.0" prefHeight="314.0" prefWidth="571.0" tabClosingPolicy="UNAVAILABLE" />
-      <Button layoutX="524.0" layoutY="14.0" mnemonicParsing="false" onAction="#openStore" text="Magasin" />
-      <Button layoutX="14.0" layoutY="14.0" mnemonicParsing="false" onAction="#openMainMenu" text="Menu" />
+      <Button layoutX="494.0" layoutY="10.0" mnemonicParsing="false" onAction="#openStore" styleClass="buttonMenu" stylesheets="@style.css" text="Store →" />
+      <Button layoutX="10.0" layoutY="10.0" mnemonicParsing="false" onAction="#openMainMenu" styleClass="buttonMenu" stylesheets="@style.css" text="← Menu" />
    </children>
 </AnchorPane>
