--- a/src/fr/lionware/ecorally/views/Store.fxml
+++ b/src/fr/lionware/ecorally/views/Store.fxml
@@ -3,12 +3,23 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TabPane?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.lionware.ecorally.controllers.Store">
     <children>
-        <TabPane fx:id="tabs" layoutX="14.0" layoutY="45.0" prefHeight="342.0" prefWidth="571.0" tabClosingPolicy="UNAVAILABLE" />
-      <Label fx:id="moneyLabel" layoutX="557.0" layoutY="14.0" />
-      <Button layoutX="14.0" layoutY="1.0" mnemonicParsing="false" onAction="#openGarage" text="Garage" />
+      <ImageView fitHeight="400.0" fitWidth="600.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@assets/StoreBackground.png" />
+         </image>
+      </ImageView>
+        <TabPane fx:id="tabs" layoutX="14.0" layoutY="71.0" prefHeight="314.0" prefWidth="571.0" tabClosingPolicy="UNAVAILABLE" />
+      <Label fx:id="moneyLabel" layoutX="557.0" layoutY="14.0" textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="20.0" />
+         </font></Label>
+      <Button layoutX="10.0" layoutY="10.0" mnemonicParsing="false" onAction="#openGarage" styleClass="buttonMenu" stylesheets="@style.css" text="← Garage" />
     </children>
 </AnchorPane>
