--- a/src/fr/lionware/ecorally/views/style.css
+++ b/src/fr/lionware/ecorally/views/style.css
@@ -19,3 +19,31 @@
 .component-block.exotic {
     -fx-background-color: #ffc107;
 }
+
+.button{
+    -fx-border-color: transparent;
+    -fx-border-width: 0;
+    -fx-background-radius: 0;
+    -fx-background-color: transparent;
+    -fx-font-family:"Segoe UI", Helvetica, Arial, sans-serif;
+    -fx-font-size: 1em; /* 12 */
+    -fx-text-fill: #828282;
+}
+#pane{
+    -fx-background-color: #ffffff;
+    -fx-opacity: 0.3;
+    -fx-background-repeat: stretch;
+    -fx-background-size: 1200 800;
+    -fx-background-position: center center;
+    -fx-effect: dropshadow(three-pass-box, black, 30, 0.5, 0, 0);
+}
+
+.buttonMenu {
+    -fx-border-color: #8bd1d2;
+    -fx-border-width: 3;
+    -fx-background-radius: 0;
+    -fx-background-color: transparent;
+    -fx-font-family: "Segoe UI", Helvetica, Arial, sans-serif;
+    -fx-font-size: 1.5em; /* 12 */
+    -fx-text-fill: #8bd1d2;
+}
